--- a/src/scss/_counter.scss
+++ b/src/scss/_counter.scss
@@ -14,3 +14,15 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 70px;
 }
+
+.gameOver {
+  text-align: center;
+  text-justify: center;
+}
+
+.btn {
+  position: absolute;
+  right: 50px;
+  size: 50%;
+  height: 50px;
+}
