--- a/src/demo.ejs
+++ b/src/demo.ejs
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/styles.css">
-  <title>Balloon Game</title>
+  <title>demo ejs</title>
 </head>
-
 <body>
+<h1>hello demo</h1>
 
+  <% for (let i=0; i<10; i++) { %>
+  test
+<% } %>
 
-  <!-- partials/scripts.html   = alte Schreibweise-->
-  <script src="js/main.js"></script>
+<% [{name: 'Axel', role: '<strong>Boss</strong>'}].forEach(data => { %>
+<li><%= data.name %>, <%- data.role %></li>
+<% }) %>
 
 </body>
-
 </html>
