--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,13 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/styles.css">
-  <title>Document</title>
+  <title>Balloon Game</title>
 </head>
 
 <body>
 
 
-  <!-- partials/scripts.html -->
+  <!-- partials/scripts.html   = alte Schreibweise-->
+  <%- include('partials/scripts') %>
 </body>
 
 </html>
